# Komodo

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  go.mod  testing.txt
docs/: info.txt
example/: codegen.kmd  expr.kmd  main.kmd  module.kmd  stmt.kmd
kmdlib/: fmbe.kmd  main.mcfunction
scripts/: build.cmd  build.sh
src/cmd/: main.go
src/cmd/cli/: cli.go  flag.go  subcommand.go
src/core/: ast.h  error.h  grammer.txt  lexer.h  main.cpp  parser.h  symtable.h  token.h  type.hpp
src/core/ast/: ast.hpp
src/core/base_definitions/: ast.cpp  ast.hpp  token.hpp  type.hpp
src/core/codegen/: execute.h  expression.h  function.h  gen.cpp  gen.h  statement.h
src/core/compiler/: compiler.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/core/helper/: ast.cpp  error.cpp  error.h  error.hpp  help.h  help.hpp  token.cpp
src/core/lexer/: lexer.cpp  lexer.h  lexer.hpp
src/core/parser/: parser.cpp  parser.h  parser.hpp
src/core/tests/: tests.cpp
src/core/utils/: include.hpp  match.hpp
src/transpiler/: lexer.h  token.h
syntaxes/: komodo.tmLanguage.json
